--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -64,4 +64,4 @@ jobs:
 
       - name: Deploy with Helm
         run: |
-          helm upgrade --install kiln ./helm --set image.tag=ghcr.io/bcgov/kiln:main
+          helm upgrade --install kiln ./helm --set image.tag=${{ needs.build_and_push.outputs.image_tag }}
