--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "concurrently \"npm run dev\" \"npx playwright test\" --kill-others --success first",
+    "test:ci": "BASE_URL=http://localhost:8080 npx playwright test"
   },
   "dependencies": {
     "@carbon/react": "^1.62.1",
@@ -20,6 +22,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.1",
     "@types/carbon-components-react": "^7.55.13",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
