--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "@carbon/react": "^1.62.1",
+    "@types/react-input-mask": "^3.0.5",
     "body-parser": "^1.20.2",
     "carbon-components-react": "^8.62.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-input-mask": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.46.1",
