--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "react": "^18.3.1",
+    "react-currency-mask": "^1.3.2",
     "react-dom": "^18.3.1",
     "react-input-mask": "^3.0.0-alpha.2"
   },
