--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ci": "BASE_URL=http://localhost:8080 npx playwright test"
   },
   "dependencies": {
+    "@carbon/icons-react": "^11.50.1",
     "@carbon/react": "^1.62.1",
     "@types/react-input-mask": "^3.0.5",
     "body-parser": "^1.20.2",
