--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -21,3 +21,5 @@ spec:
             - containerPort: 8080
           resources: {{- toYaml .Values.resources | nindent 12 }}
       restartPolicy: Always
+  strategy:
+    type: Recreate
