--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_COMM_API_SAVEDATA_ENDPOINT_URL=http://localhost:3000/saveData
+VITE_COMM_API_GENERATE_ENDPOINT_URL=http://localhost:3000/generate
