--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -83,6 +83,15 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ENDPOINT_URL }}
+            VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets.VITE_COMM_API_GENERATE_ENDPOINT_URL }}
+            VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets.VITE_COMM_API_EDIT_ENDPOINT_URL }}
+            VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL }}
+            VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL }}
+            VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL }}
+            VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL }}
+            VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL }}
 
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
