--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "keycloak-js": "^26.1.0",
     "pagedjs": "^0.4.3",
     "react": "^18.3.1",
     "react-currency-mask": "^1.3.2",
