--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ VITE_COMM_API_UNLOCK_ICM_FORM_URL=http://localhost:3000/clearICMLockedFlag
 
 VITE_TEMPLATE_REPO_URL=http://localhost:3000
 VITE_KLAMM_URL=http://localhost:8000
+
+VITE_SSO_REDIRECT_URI=http://localhost:4173
+
+VITE_SSO_AUTH_SERVER_URL=
+VITE_SSO_REALM=
+VITE_SSO_CLIENT_ID=
