--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -92,6 +92,11 @@ jobs:
             VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL }}
             VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL }}
             VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL }}
+            VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI }}
+            VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL }}
+            VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM }}
+            VITE_SSO_CLIENT_ID=k${{ secrets.VITE_SSO_CLIENT_ID }}
+
 
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
