--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -95,7 +95,7 @@ jobs:
             VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI }}
             VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL }}
             VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM }}
-            VITE_SSO_CLIENT_ID=k${{ secrets.VITE_SSO_CLIENT_ID }}
+            VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID }}
 
 
     outputs:
