New public end point PrintToPage

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_COMM_API_EDIT_ENDPOINT_URL=http://localhost:3000/edit
 VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=http://localhost:3000/saveICMData
 VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=http://localhost:3000/loadICMData
 VITE_COMM_API_UNLOCK_ICM_FORM_URL=http://localhost:3000/clearICMLockedFlag
+VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=http://localhost:3000/loadSavedJson
 
 VITE_TEMPLATE_REPO_URL=http://localhost:3000
 VITE_KLAMM_URL=http://localhost:8000
