--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -96,6 +96,7 @@ jobs:
             VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL }}
             VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM }}
             VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID }}
+            VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{secrets.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL}}
 
 
     outputs:
