--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -75,6 +75,16 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      
+       - name: Set environment variables based on branch
+        run: |
+          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+            echo "ENVIRONMENT=PROD" >> $GITHUB_ENV
+          elif [[ "${GITHUB_REF##*/}" == "dev" ]]; then
+            echo "ENVIRONMENT=DEV" >> $GITHUB_ENV
+          else
+            echo "ENVIRONMENT=TEST" >> $GITHUB_ENV
+          fi
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -84,19 +94,19 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ENDPOINT_URL }}
-            VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets.VITE_COMM_API_GENERATE_ENDPOINT_URL }}
-            VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets.VITE_COMM_API_EDIT_ENDPOINT_URL }}
-            VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL }}
-            VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL }}
-            VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL }}
-            VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL }}
-            VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL }}
-            VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI }}
-            VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL }}
+            VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets['VITE_COMM_API_SAVEDATA_ENDPOINT_URL_' + env.ENVIRONMENT] }}
+            VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets['VITE_COMM_API_GENERATE_ENDPOINT_URL_' + env.ENVIRONMENT] }}
+            VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets['VITE_COMM_API_EDIT_ENDPOINT_URL_' + env.ENVIRONMENT] }}
+            VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets['VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL_' + env.ENVIRONMENT] }}
+            VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets['VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL_' + env.ENVIRONMENT] }}
+            VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets['VITE_COMM_API_UNLOCK_ICM_FORM_URL_' + env.ENVIRONMENT] }}
+            VITE_TEMPLATE_REPO_URL=${{ secrets['VITE_TEMPLATE_REPO_URL_' + env.ENVIRONMENT] }}
+            VITE_KLAMM_URL=${{ secrets['VITE_KLAMM_URL_' + env.ENVIRONMENT] }}
+            VITE_SSO_REDIRECT_URI=${{ secrets['VITE_SSO_REDIRECT_URI_' + env.ENVIRONMENT] }}
+            VITE_SSO_AUTH_SERVER_URL=${{ secrets['VITE_SSO_AUTH_SERVER_URL_' + env.ENVIRONMENT] }}
             VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM }}
-            VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID }}
-            VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{secrets.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL}}
+            VITE_SSO_CLIENT_ID={{ secrets.VITE_SSO_CLIENT_ID }}
+            VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{ secrets['VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL_' + env.ENVIRONMENT] }}
 
 
     outputs:
