--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: kiln
           image: "{{ .Values.image.tag }}"
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources: {{- toYaml .Values.resources | nindent 12 }}
