--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "keycloak-js": "^26.1.4",
     "pagedjs": "^0.4.3",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-currency-mask": "^1.3.2",
     "react-dom": "^18.3.1",
