--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ VITE_SSO_REDIRECT_URI=http://localhost:4173
 VITE_SSO_AUTH_SERVER_URL=
 VITE_SSO_REALM=
 VITE_SSO_CLIENT_ID=
+
+VITE_COMM_API_PROXY_TARGET=http://localhost:3030
