--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "keycloak-js": "^26.1.4",
+    "nginx": "^1.0.8",
     "pagedjs": "^0.4.3",
     "react": "^18.3.1",
     "react-currency-mask": "^1.3.2",
