--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
         VITE_SSO_AUTH_SERVER_URL: https://dev.loginproxy.gov.bc.ca/auth
         VITE_SSO_REALM: 
         VITE_SSO_CLIENT_ID: 
-        API_PROXY_TARGET: http://host.docker.internal:3030
+        VITE_API_PROXY_TARGET: http://host.docker.internal:3030
 
     image: kiln
     ports:
