--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,28 +31,6 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-  test_e2e:
-    runs-on: ubuntu-latest
-    needs: lint
-
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-
-      - name: Run E2E tests
-        run: npm run test:e2e
-
   build_and_push:
     runs-on: ubuntu-latest
     needs: test_e2e
@@ -155,9 +133,55 @@ jobs:
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
 
-  deploy:
-    needs: build_and_push
+  test_e2e:
     runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull built image
+        run: |
+          docker pull ${{ needs.build_and_push.outputs.image_tag }}
+
+      - name: Run container
+        run: |
+          docker run -d --name kiln -p 8080:8080 ${{ needs.build_and_push.outputs.image_tag }}
+
+      - name: Wait for frontend to be available
+        uses: jakejarvis/wait-action@v0.1.0
+        with:
+          url: http://localhost:8080
+          timeout: 90
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test_e2e
 
     steps:
       - name: Checkout the repository
