--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
   build_and_push:
     runs-on: ubuntu-latest
-    needs: test_e2e
+    needs: lint
 
     steps:
       - name: Checkout the repository
