--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -181,7 +181,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: test_e2e
+    needs:
+      - test_e2e
+      - build_and_push
 
     steps:
       - name: Checkout the repository
