--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "keycloak-js": "^26.1.4",
+    "localforage": "^1.10.0",
     "pagedjs": "^0.4.3",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
