--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -32,6 +32,7 @@ http {
         location /api/ {
             rewrite ^/api(/.*)$ $1 break;
             proxy_pass ${VITE_API_PROXY_TARGET};
+            proxy_ssl_server_name on;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
