--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -133,9 +133,111 @@ jobs:
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
 
-  test_e2e:
+    build_for_e2e:
     runs-on: ubuntu-latest
     needs: build_and_push
+
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      
+      - name: Export secrets based on environment
+        run: |
+          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+            echo "VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets.VITE_COMM_API_GENERATE_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets.VITE_COMM_API_EDIT_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI_PROD }}" >> $GITHUB_ENV
+            echo "VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM_PROD }}" >> $GITHUB_ENV
+            echo "VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID_PROD }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL_PROD }}" >> $GITHUB_ENV
+            echo "VITE_API_PROXY_TARGET=${{ secrets.VITE_API_PROXY_TARGET_PROD_E2E }}" >> $GITHUB_ENV
+
+          elif [[ "${GITHUB_REF##*/}" == "test" ]]; then
+            echo "VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets.VITE_COMM_API_GENERATE_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets.VITE_COMM_API_EDIT_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI_TEST }}" >> $GITHUB_ENV
+            echo "VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM_TEST }}" >> $GITHUB_ENV
+            echo "VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID_TEST }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL_TEST }}" >> $GITHUB_ENV
+            echo "VITE_API_PROXY_TARGET=${{ secrets.VITE_API_PROXY_TARGET_TEST_E2E }}" >> $GITHUB_ENV
+
+          else
+            echo "VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ secrets.VITE_COMM_API_GENERATE_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_EDIT_ENDPOINT_URL=${{ secrets.VITE_COMM_API_EDIT_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ secrets.VITE_COMM_API_UNLOCK_ICM_FORM_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_TEMPLATE_REPO_URL=${{ secrets.VITE_TEMPLATE_REPO_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_KLAMM_URL=${{ secrets.VITE_KLAMM_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REDIRECT_URI=${{ secrets.VITE_SSO_REDIRECT_URI_DEV }}" >> $GITHUB_ENV
+            echo "VITE_SSO_AUTH_SERVER_URL=${{ secrets.VITE_SSO_AUTH_SERVER_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_SSO_REALM=${{ secrets.VITE_SSO_REALM_DEV }}" >> $GITHUB_ENV
+            echo "VITE_SSO_CLIENT_ID=${{ secrets.VITE_SSO_CLIENT_ID_DEV }}" >> $GITHUB_ENV
+            echo "VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{ secrets.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL_DEV }}" >> $GITHUB_ENV
+            echo "VITE_API_PROXY_TARGET=${{ secrets.VITE_API_PROXY_TARGET_DEV_E2E }}" >> $GITHUB_ENV
+          fi
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VITE_COMM_API_SAVEDATA_ENDPOINT_URL=${{ env.VITE_COMM_API_SAVEDATA_ENDPOINT_URL }}
+            VITE_COMM_API_GENERATE_ENDPOINT_URL=${{ env.VITE_COMM_API_GENERATE_ENDPOINT_URL }}
+            VITE_COMM_API_EDIT_ENDPOINT_URL=${{ env.VITE_COMM_API_EDIT_ENDPOINT_URL }}
+            VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=${{ env.VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL }}
+            VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=${{ env.VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL }}
+            VITE_COMM_API_UNLOCK_ICM_FORM_URL=${{ env.VITE_COMM_API_UNLOCK_ICM_FORM_URL }}
+            VITE_TEMPLATE_REPO_URL=${{ env.VITE_TEMPLATE_REPO_URL }}
+            VITE_KLAMM_URL=${{ env.VITE_KLAMM_URL }}
+            VITE_SSO_REDIRECT_URI=${{ env.VITE_SSO_REDIRECT_URI }}
+            VITE_SSO_AUTH_SERVER_URL=${{ env.VITE_SSO_AUTH_SERVER_URL }}
+            VITE_SSO_REALM=${{ env.VITE_SSO_REALM }}
+            VITE_SSO_CLIENT_ID=${{ env.VITE_SSO_CLIENT_ID }}
+            VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=${{ env.VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL }}
+            VITE_API_PROXY_TARGET=${{ env.VITE_API_PROXY_TARGET }}
+
+
+    outputs:
+      image_tag: ${{ steps.meta.outputs.tags }}
+
+  test_e2e:
+    runs-on: ubuntu-latest
+    needs: build_for_e2e
 
     steps:
       - name: Checkout the repository
@@ -153,11 +255,11 @@ jobs:
 
       - name: Pull built image
         run: |
-          docker pull ${{ needs.build_and_push.outputs.image_tag }}
+          docker pull ${{ needs.build_for_e2e.outputs.image_tag }}
 
       - name: Run container
         run: |
-          docker run -d --name kiln -p 8080:8080 ${{ needs.build_and_push.outputs.image_tag }}
+          docker run -d --name kiln -p 8080:8080 ${{ needs.build_for_e2e.outputs.image_tag }}
 
       - name: Wait for frontend to be available
         uses: jakejarvis/wait-action@v0.1.0
