--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -29,6 +29,15 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        location /debug-uri {
+            return 200 "$uri";
+        }
+
+        location ^~ /formfoundry-dev/ {
+            rewrite ^/formfoundry-dev(/.*)$ $1 break;
+            try_files $uri $uri/ /index.html;
+        }
+
         location /api/ {
             rewrite ^/api(/.*)$ $1 break;
             proxy_pass ${VITE_API_PROXY_TARGET};
@@ -41,7 +50,6 @@ http {
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot|json)$ {
             expires 1y;
-            access_log off;
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
