remove formfoundry rewrite from nginx

--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -33,10 +33,10 @@ http {
             return 200 "$uri";
         }
 
-        location ^~ /formfoundry-dev/ {
-            rewrite ^/formfoundry-dev(/.*)$ $1 break;
-            try_files $uri $uri/ /index.html;
-        }
+        # location ^~ /formfoundry-dev/ {
+        #     rewrite ^/formfoundry-dev(/.*)$ $1 break;
+        #     try_files $uri $uri/ /index.html;
+        # }
 
         location /api/ {
             rewrite ^/api(/.*)$ $1 break;
