--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@carbon/icons-react": "^11.50.1",
     "@carbon/react": "^1.72.0",
+    "@fontsource/noto-sans": "^5.2.6",
     "@types/react-input-mask": "^3.0.5",
     "body-parser": "^1.20.2",
     "build": "^0.1.4",
