--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
         VITE_KLAMM_URL: http://host.docker.internal:8000
         VITE_SSO_REDIRECT_URI: http://localhost:8080
         VITE_SSO_AUTH_SERVER_URL: https://dev.loginproxy.gov.bc.ca/auth
-        VITE_SSO_REALM: 
-        VITE_SSO_CLIENT_ID: 
+        VITE_SSO_REALM: standard
+        VITE_SSO_CLIENT_ID: kiln-5888
         VITE_API_PROXY_TARGET: http://host.docker.internal:3030
 
     image: kiln
