--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=http://localhost:3030/saveICMData
 VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=http://localhost:3030/loadICMData
 VITE_COMM_API_UNLOCK_ICM_FORM_URL=http://localhost:3030/clearICMLockedFlag
 VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=http://localhost:3030/loadSavedJson
+VITE_COMM_API_GENERATE_STANDALONE_ENDPOINT_URL=http://localhost:3030/generateStandalone
 
 VITE_TEMPLATE_REPO_URL=http://localhost:3030
 VITE_KLAMM_URL=http://localhost:8000
