--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -41,6 +41,10 @@ http {
         location /api/ {
             rewrite ^/api(/.*)$ $1 break;
             proxy_pass ${VITE_API_PROXY_TARGET};
+            
+            #Debug proxyhost
+            add_header X-Debug-Upstream "$scheme://$proxy_host$request_uri" always;
+
             proxy_ssl_server_name on;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
