Branch for implementing a PWA Kiln

--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -8,6 +8,9 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    types {
+  application/manifest+json  webmanifest;
+}
     sendfile on;
     keepalive_timeout 65;
 
