--- a/helm/templates/route.yaml
+++ b/helm/templates/route.yaml
@@ -1,7 +1,7 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: kiln-route
+  name: kiln
   annotations:
     haproxy.router.openshift.io/ip_whitelist: 142.22.0.0/15 142.24.0.0/13 142.32.0.0/14 142.36.0.0/16
   labels:
