Initial Changes for Portal

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ VITE_COMM_API_SAVEDATA_ICM_ENDPOINT_URL=http://localhost:3030/saveICMData
 VITE_COMM_API_LOADDATA_ICM_ENDPOINT_URL=http://localhost:3030/loadICMData
 VITE_COMM_API_UNLOCK_ICM_FORM_URL=http://localhost:3030/clearICMLockedFlag
 VITE_COMM_API_LOADSAVEDJSON_ENDPOINT_URL=http://localhost:3030/loadSavedJson
-VITE_COMM_API_GENERATE_STANDALONE_ENDPOINT_URL=http://localhost:3030/generateStandalone
 VITE_COMM_API_PDFTEMPLATE_ENDPOINT_URL=http://localhost:3030/pdfTemplate
+VITE_COMM_API_GENERATE_PORTAL_FORM_ENDPOINT_URL=http://localhost:3030/generatePortalForm
 
 VITE_TEMPLATE_REPO_URL=http://localhost:3030
 VITE_KLAMM_URL=http://localhost:8000
@@ -18,4 +18,4 @@ VITE_SSO_REALM=
 VITE_SSO_CLIENT_ID=
 
 VITE_COMM_API_PROXY_TARGET=http://localhost:3030
-VITE_IS_STANDALONE=false
+VITE_IS_PORTAL_INTEGRATED=false
