--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -42,10 +42,12 @@ http {
             rewrite ^/api(/.*)$ $1 break;
             proxy_pass ${VITE_API_PROXY_TARGET};
             proxy_ssl_server_name on;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Host $http_x_forwarded_host;
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot|json)$ {
