set incoming host cookie

--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -25,6 +25,7 @@ http {
         index index.html;
 
         location / {
+            add_header Set-Cookie "originalHost=$http_x_forwarded_host; Path=/; SameSite=Lax";
             add_header Set-Cookie "username=$username_cookie; Path=/";
             try_files $uri $uri/ /index.html;
         }
