added always flag

--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -25,8 +25,8 @@ http {
         index index.html;
 
         location / {
-            add_header Set-Cookie "originalHost=$http_x_forwarded_host; Path=/; SameSite=Lax";
-            add_header Set-Cookie "username=$username_cookie; Path=/";
+            add_header Set-Cookie "originalHost=$http_x_forwarded_host; Path=/; SameSite=Lax" always;
+            add_header Set-Cookie "username=$username_cookie; Path=/"always;
             try_files $uri $uri/ /index.html;
         }
 
