--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -132,55 +132,55 @@ jobs:
     outputs:
       image_tag: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-e2e
 
-  test_e2e:
-    runs-on: ubuntu-latest
-    needs: build_for_e2e
+  # test_e2e:
+  #   runs-on: ubuntu-latest
+  #   needs: build_for_e2e
 
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout the repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Log in to GitHub Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Pull built image
-        run: |
-          docker pull ${{ needs.build_for_e2e.outputs.image_tag }}
+  #     - name: Pull built image
+  #       run: |
+  #         docker pull ${{ needs.build_for_e2e.outputs.image_tag }}
 
-      - name: Run container
-        run: |
-          docker run -d --name kiln -p 8080:8080 ${{ needs.build_for_e2e.outputs.image_tag }}
+  #     - name: Run container
+  #       run: |
+  #         docker run -d --name kiln -p 8080:8080 ${{ needs.build_for_e2e.outputs.image_tag }}
 
-      - name: Wait for frontend to be available
-        uses: jakejarvis/wait-action@v0.1.0
-        with:
-          url: http://localhost:8080
-          timeout: 90
+  #     - name: Wait for frontend to be available
+  #       uses: jakejarvis/wait-action@v0.1.0
+  #       with:
+  #         url: http://localhost:8080
+  #         timeout: 90
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+  #     - name: Install Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+  #     - name: Install Playwright browsers
+  #       run: npx playwright install --with-deps
 
-      - name: Run Playwright tests
-        run: npx playwright test
+  #     - name: Run Playwright tests
+  #       run: npx playwright test
   
   build_and_push:
     runs-on: ubuntu-latest
-    needs: test_e2e
+    # needs: test_e2e
 
     steps:
       - name: Checkout the repository
