--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -31,7 +31,8 @@ http {
         }
 
         location /debug-uri {
-            return 200 "$uri";
+            default_type text/plain;
+            return 200 "Host: $host X-Forwarded-Host: $http_x_forwarded_host Cookie: $http_cookie";
         }
 
         # location ^~ /formfoundry-dev/ {
