debug kong plugin

--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -32,7 +32,7 @@ http {
 
         location /debug-uri {
             default_type text/plain;
-            return 200 "Host: $host X-Forwarded-Host: $http_x_forwarded_host Cookie: $http_cookie";
+            return 200 "Host: $host X-Forwarded-Host: $http_x_forwarded_host Cookie: $http_cookie X-Debug-Kong: $http_x_debug_kong";
         }
 
         # location ^~ /formfoundry-dev/ {
