--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -25,14 +25,14 @@ http {
         index index.html;
 
         location / {
-            add_header Set-Cookie "originalHost=$http_x_forwarded_host; Path=/; SameSite=Lax" always;
+            add_header Set-Cookie "originalHost=$http_x_forwarded_server; Path=/; SameSite=Lax" always;
             add_header Set-Cookie "username=$username_cookie; Path=/" always;
             try_files $uri $uri/ /index.html;
         }
 
         location /debug-uri {
             default_type text/plain;
-            return 200 "Host: $host X-Forwarded-Host: $http_x_forwarded_host Cookie: $http_cookie X-Debug-Kong: $http_x_debug_kong";
+            return 200 "Host: $host X-Forwarded-server: $http_x_forwarded_server Cookie: $http_cookie X-Debug-Kong: $http_x_debug_kong";
         }
 
         # location ^~ /formfoundry-dev/ {
